# oabp-langchain-tool

./: LICENSE  README.md  examples.py  pyproject.toml
src/oabp_langchain_tool/: __init__.py  tool.py
tests/: test_tool.py
